# postcode_api_rust

./: .env.example  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/api/: error.rs  handlers.rs  mod.rs  server.rs  state.rs
src/postcode/: mod.rs
src/postcode/snapshots/: postcode_api_rust__postcode__tests__multiple_with_locations.snap.new  postcode_api_rust__postcode__tests__with_location.snap
src/postcode_api/: api_client.rs
src/postcode_api/snapshots/: postcode_api_rust__postcode_api__api_client__tests__get_many_postcode_details.snap  postcode_api_rust__postcode_api__api_client__tests__get_postcode_details.snap
