[package]
name = "postcode_api_rust"
version = "0.1.0"
authors = ["olliebatch <47030523+olliebatch@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
